# ai-agent-development-workshop-materials

./: .gitignore  LICENSE  README.md  sample.env
backend/: README.md  pyproject.toml  run_backend.sh  setup.sh
backend/app/: main.py
backend/app/agents/: anthropic_agent.py  deepseek_agent.py  google_gemini_agent.py  langchain_agent.py  langgraph_full_agent.py  ollama_agent.py  openai_agent.py  smolagent_agent.py
backend/app/routers/: chat.py  db.py  upload.py
backend/app/services/: agent_router.py  db.py
backend/app/tools/: __init__.py  file_finder.py  file_reader.py  registry.py  search_tool.py  sqlite_tool.py
backend/scripts/: init_db.py
backend/uploaded_files/: FoundryLabs_Declan_EmploymentOffer 2.docx
frontend-nextjs/: README.md  next.config.js  package.json  run_frontend.sh  tsconfig.json
frontend-nextjs/app/: globals.css  layout.tsx  page.tsx
frontend-nextjs/components/: Chat.tsx  FileUpload.tsx  ProviderSelector.tsx
frontend-nextjs/lib/: api.ts
frontend-streamlit/: README.md  app.py  run_frontend.sh
